--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Details.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model psi_project.Models.Categoria
+﻿@model WebAppProjeto01G1.Models.Categoria
 
 @{
     Layout = null;
@@ -27,8 +27,8 @@
         </dl>
     </div>
     <p>
-        @Html.ActionLink("Edit", "Edit", new { id = Model.CategoriaId }) |
-        @Html.ActionLink("Back to List", "Index")
+        @Html.ActionLink("Editar", "Edit", new { id = Model.CategoriaId }) |
+        @Html.ActionLink("Retornar a Lista", "Index")
     </p>
 </body>
 </html>
