--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Create.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model psi_project.Models.Categoria
+﻿@model WebAppProjeto01G1.Models.Categoria
 
 @{
     Layout = null;
@@ -9,7 +9,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Edit</title>
+    <title>Create</title>
 </head>
 <body>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
@@ -17,7 +17,7 @@
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
     
     
-    @using (Html.BeginForm())
+    @using (Html.BeginForm()) 
     {
         @Html.AntiForgeryToken()
         
@@ -25,10 +25,9 @@
             <h4>Categoria</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            @Html.HiddenFor(model => model.CategoriaId)
-    
             <div class="form-group">
                 @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
+
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
@@ -37,14 +36,14 @@
     
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Salvar" class="btn btn-default" />
+                    <input type="submit" value="Criar" class="btn btn-default" />
                 </div>
             </div>
         </div>
     }
     
     <div>
-        @Html.ActionLink("Voltar", "Index")
+        @Html.ActionLink("Retornar a Lista", "Index")
     </div>
 </body>
 </html>
