--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
@@ -52,8 +52,8 @@
     <script src="@Url.Content("~/scripts/DataTables-1.10.2/jquery.dataTables.js")"></script>
     <script src="@Url.Content("~/scripts/DataTables-1.10.2/dataTables.bootstrap.js")"></script>
     <script type="text/javascript">
-$(document).ready(function () {
-$('.table').dataTable();
-});
+$('.table').dataTable({
+"order": [[1, "asc"]]
+    });
     </script>
 }
