--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
@@ -2,11 +2,12 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Listagem de FABRICANTES";
+    ViewBag.Title = "Relação de um NOVO FABRICANTE";
 }
+
 <div class="panel panel-primary">
     <div class="panel-heading">
-        Relação de FABRICANTES registrados
+        Relação de um NOVO FABRICANTE
     </div>
     <div class="panel-body">
         <table class="table table-striped table-hover">
@@ -52,8 +53,14 @@
     <script src="@Url.Content("~/scripts/DataTables-1.10.2/jquery.dataTables.js")"></script>
     <script src="@Url.Content("~/scripts/DataTables-1.10.2/dataTables.bootstrap.js")"></script>
     <script type="text/javascript">
-$('.table').dataTable({
-"order": [[1, "asc"]]
-    });
+        $(document).ready(function () {
+        $('.table').dataTable({
+            "order": [[1, "asc"]]
+        });
+
+            $('li').removeClass("active");
+
+            $('#liFabricantes').addClass("active");
+        });
     </script>
 }
