--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
@@ -2,7 +2,14 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Relação de um NOVO FABRICANTE";
+    ViewBag.Title = "Listagem de FABRICANTES";
+}
+
+@if (@TempData["Message"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["Message"]
+    </div>
 }
 
 <div class="panel panel-primary">
@@ -54,12 +61,10 @@
     <script src="@Url.Content("~/scripts/DataTables-1.10.2/dataTables.bootstrap.js")"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-        $('.table').dataTable({
-            "order": [[1, "asc"]]
-        });
-
+            $('.table').dataTable({
+                "order": [[1, "asc"]]
+            });
             $('li').removeClass("active");
-
             $('#liFabricantes').addClass("active");
         });
     </script>
