--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Index.cshtml
@@ -1,41 +1,67 @@
 ﻿@model IEnumerable<WebAppProjeto01G1.Models.Categoria>
 
+
 @{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Relação de uma NOVA CATEGORIA";
 }
 
-<!DOCTYPE html>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Relação de uma NOVA CATEGORIA
+    </div>
+    <div class="panel-body">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.CategoriaId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.CategoriaId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nome)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Alterar", "Edit", new { id = item.CategoriaId }) |
+                            @Html.ActionLink("Detalhes", "Details", new { id = item.CategoriaId }) |
+                            @Html.ActionLink("Eliminar", "Delete", new { id = item.CategoriaId })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="panel-footer panel-info">
+        @Html.ActionLink("Registrar uma nova CATEGORIA", "Create", null, new { @class = "btn btn-success" })
+    </div>
+</div>
+@section styles{
+    <link href="@Url.Content("~/content/DataTables-1.10.2/css/dataTables.bootstrap.css")" rel="stylesheet" />
+}
+@section ScriptPage{
+    <script src="@Url.Content("~/scripts/DataTables-1.10.2/jquery.dataTables.js")"></script>
+    <script src="@Url.Content("~/scripts/DataTables-1.10.2/dataTables.bootstrap.js")"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+        $('.table').dataTable({
+            "order": [[1, "asc"]]
+        });
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <p>
-        @Html.ActionLink("Criar Categoria", "Create")
-    </p>
-    <table class="table">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nome)
-            </th>
-            <th></th>
-        </tr>
-    
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nome)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id=item.CategoriaId }) |
-                @Html.ActionLink("Detalhes", "Details", new { id=item.CategoriaId }) |
-                @Html.ActionLink("Excluir", "Delete", new { id=item.CategoriaId })
-            </td>
-        </tr>
-    }
-    
-    </table>
-</body>
-</html>
+            $('li').removeClass("active");
+
+            $('#liCategoria').addClass("active");
+        });
+    </script>
+}
