--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Fabricantes/Index.cshtml
@@ -4,7 +4,12 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Relação de um NOVO FABRICANTE";
 }
-
+@if (@TempData["Message"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["Message"]
+    </div>
+}
 <div class="panel panel-primary">
     <div class="panel-heading">
         Relação de um NOVO FABRICANTE
@@ -54,9 +59,9 @@
     <script src="@Url.Content("~/scripts/DataTables-1.10.2/dataTables.bootstrap.js")"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-        $('.table').dataTable({
-            "order": [[1, "asc"]]
-        });
+            $('.table').dataTable({
+                "order": [[1, "asc"]]
+            });
 
             $('li').removeClass("active");
 
