--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/_PorCategoria.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/_PorCategoria.cshtml
@@ -13,7 +13,7 @@
                     <th>
                         @Html.DisplayNameFor(model => model.Nome)
                     </th>
-                    <th>Categoria</th>
+                    <th>Fabricante</th>
                 </tr>
             </thead>
             <tbody>
@@ -27,7 +27,7 @@
                             @Html.DisplayFor(modelItem => item.Nome)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Categoria.Nome)
+                            @Html.DisplayFor(modelItem => item.Fabricante.Nome)
                         </td>
                     </tr>
                 }
