--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Details.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Details.cshtml
@@ -32,3 +32,4 @@
         new { @class = "btn btn-info" })
     </div>
 </div>
+@Html.Partial("~/Views/Produto/_PorCategoria.cshtml", Model.Produtos.ToList())
