--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Shared/_Layout.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Shared/_Layout.cshtml
@@ -2,8 +2,8 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <charset ="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" 
+          charset ="utf-8" />
     <title>@ViewBag.Title</title>
     <link href="@Url.Content("~/content/bootstrap.css")" rel="stylesheet" />
     @RenderSection("styles", false)
