Erro na linha 17-PRODUTODAL

--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Shared/_Layout.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <div>
         <div class="container">
             <div class="row">
-                <div class="page-header ">
+                <div class="page-header bg-primary">
                     <h1>
                         Desenvolvimento em ASP.NET MVC
                         <small>
@@ -37,7 +37,7 @@
                 </div>
             </div> <br />
             <div class="row">
-                <div class="col-xs-12 col-md-12 bg-danger">
+                <div class="col-xs-12 col-md-12 bg-primary ">
                     <small>Layout com Bootstrap</small>
                 </div>
             </div>
