--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Create.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Create.cshtml
@@ -12,39 +12,31 @@
             Registro de um NOVO PRODUTO
         </div>
         <div class="panel-body">
+            @Html.Partial("~/Views/Produto/_PartialEditContentPanel.cshtml", Model)
             <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes:
-         new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.EditorFor(model => model.Nome, new
                    {
-                       htmlAttributes =
-         new { @class = "form-control" }
+                       htmlAttributes = new { @class = "form-control" }
                    })
-                        @Html.ValidationMessageFor(model => model.Nome, "",
-         new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.CategoriaId, "CategoriaId", htmlAttributes:
-         new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.CategoriaId, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                    @Html.DropDownList("CategoriaId", null, htmlAttributes:
-         new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CategoriaId, "",
-         new { @class = "text-danger" })
+                        @Html.DropDownList("CategoriaId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.CategoriaId, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(model => model.FabricanteId, "FabricanteId", htmlAttributes:
-         new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.FabricanteId, "FabricanteId", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.DropDownList("FabricanteId", null, htmlAttributes:
-         new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.FabricanteId, "",
-         new { @class = "text-danger" })
+                        @Html.DropDownList("FabricanteId", null, htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.FabricanteId, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
