--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
@@ -11,6 +11,7 @@
             Alteração dos dados de um PRODUTO
         </div>
         <div class="panel-body">
+            @Html.Partial("~/Views/Produto/_PartialEditContentPanel.cshtml", Model)
             <div class="form-horizontal">
                 <h4>Produto</h4>
                 <hr />
@@ -19,8 +20,8 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nome, new{htmlAttributes =new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nome, "", new{@class ="text-danger" })
+                        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -49,7 +50,7 @@
                     </div>
                 </div>
             </div>
-            </div>
+        </div>
         </div>
         }
         @section ScriptPage {
