--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
@@ -3,7 +3,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Visualizando os dados de um PRODUTO";
 }
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Produto", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="panel panel-primary">
@@ -17,6 +17,40 @@
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.ProdutoId)
+                @Html.HiddenFor(model => model.LogotipoMimeType)
+                @Html.HiddenFor(model => model.Logotipo)
+                <div class="col-md-offset-7 col-md-5">
+                    <div class="form-group">
+                        @Html.TextBox("logotipo", "", new { type = "file" }) <br />
+                    </div>
+                    <div class="form-group">
+                        @if (Model.Logotipo == null)
+                        {
+                            <div class="form-control-static">
+                                Nenhuma imagem adicionada
+                            </div>
+                        }
+                        else
+                        {
+                           <div class="panel-body">
+                                <img class=""img-thumbnail"
+                                     src="@Url.Action("GetLogotipo", "Produtos",
+                                     new { id = Model.ProdutoId })"
+                                     style="display:block;
+                                     margin-left:auto; margin-right:auto;" />
+                            </div>
+                            <div class="panel-footer">
+                                <div class="checkbox">
+                                    <label>
+                                        <input type="checkbox" name="chkRemoverImagem"
+                                           value="Sim">Remover imagem
+                                    </label>
+                                </div>
+                            </div>
+                        }
+                    </div>
+                </div>
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -24,6 +58,8 @@
                         @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                     </div>
                 </div>
+
+
                 <div class="form-group">
                     @Html.LabelFor(model => model.CategoriaId, "CategoriaId", htmlAttributes:
                     new { @class = "control-label col-md-2" })
@@ -50,16 +86,16 @@
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
-        }
-        @section ScriptPage {
-            <script type="text/javascript">
-$(document).ready(function () {
-$('li').removeClass("active");
-$('#liProdutos').addClass("active");
-});
-            </script>
-            }
+                </div>
+            </div>
+}
+@section ScriptPage {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('li').removeClass("active");
+            $('#liProdutos').addClass("active");
+        });
+    </script>
+}
 
 
