--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
@@ -32,8 +32,8 @@
                         }
                         else
                         {
-                           <div class="panel-body">
-                                <img class=""img-thumbnail"
+                            <div class="panel-body">
+                                <img class="" img-thumbnail"
                                      src="@Url.Action("GetLogotipo", "Produtos",
                                      new { id = Model.ProdutoId })"
                                      style="display:block;
@@ -43,51 +43,23 @@
                                 <div class="checkbox">
                                     <label>
                                         <input type="checkbox" name="chkRemoverImagem"
-                                           value="Sim">Remover imagem
+                                               value="Sim">Remover imagem
                                     </label>
                                 </div>
+                                @Html.ActionLink("Baixar o arquivo : " + Model.NomeArquivo, "DownloadArquivo", "Produto", new { area = "Cadastros", id = Model.ProdutoId }, null)
                             </div>
                         }
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CategoriaId, "CategoriaId", htmlAttributes:
-                    new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("CategoriaId", null, htmlAttributes:
-                        new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CategoriaId, "",
-                        new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.FabricanteId, "FabricanteId", htmlAttributes:
-                    new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("FabricanteId", null, htmlAttributes:
-                        new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.FabricanteId, "",
-                        new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Gravar alterações" class="btn btn-default" />
-                    </div>
+                        <div class="form-group">
+                            <div class="col-md-offset-2 col-md-10">
+                                <input type="submit" value="Gravar alterações" class="btn btn-default" />
+                            </div>
+                        </div>
                 </div>
             </div>
-                </div>
-            </div>
+         </div>
 }
 @section ScriptPage {
     <script type="text/javascript">
