--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Create.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Create.cshtml
@@ -13,38 +13,11 @@
         </div>
         <div class="panel-body">
             @Html.Partial("~/Views/Produto/_PartialEditContentPanel.cshtml", Model)
-            <div class="form-horizontal">
-                @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nome, new
-                   {
-                       htmlAttributes = new { @class = "form-control" }
-                   })
-                        @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CategoriaId, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("CategoriaId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.CategoriaId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.FabricanteId, "FabricanteId", htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.DropDownList("FabricanteId", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.FabricanteId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-            </div>
+
             <div class="panel-footer panel-info">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Adicionar Produto" class="btn btn-danger" />
-                    @Html.ActionLink("Retornar para a listagem de PRODUTOS", "Index", null,
-         new { @class = "btn btn-warning" })
+                    @Html.ActionLink("Retornar para a listagem de PRODUTOS", "Index", null, new { @class = "btn btn-warning" })
                 </div>
                 <br />
                 <br />
@@ -52,12 +25,12 @@
         </div>
     </div>
 
-@section ScriptPage {
-    <script type="text/javascript">
-$(document).ready(function () {
-$('li').removeClass("active");
-$('#liProdutos').addClass("active");
-});
-    </script>
-}
+    @section ScriptPage {
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('li').removeClass("active");
+                $('#liProdutos').addClass("active");
+            });
+        </script>
+    }
 }
