--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Delete.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Delete.cshtml
@@ -8,7 +8,7 @@
         Visualizando detalhes do PRODUTO a ser removido
     </div>
     <div class="panel-body">
-        @Html.Partial("~/Views/Produtos/_PartialDetailsContentPanel.cshtml", Model)
+        @Html.Partial("~/Views/Produto/_PartialDetailsContentPanel.cshtml", Model)
     </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Categoria.Nome)<br />
@@ -42,7 +42,7 @@
            data-target="#deleteConfirmationModal">Remover</a>
         @Html.ActionLink("Retornar para a listagem", "Index", null, new { @class = "btn btn-info" })
     </div>
-</div>
+
 <div class="modal fade" id="deleteConfirmationModal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -63,7 +63,7 @@
                         Você está certo que deseja prosseguir?
                     </strong>
                 </p>
-                @using (Html.BeginForm("Delete", "Produtos", FormMethod.Post,
+                @using (Html.BeginForm("Delete", "Produto", FormMethod.Post,
                 new { @id = "delete-form", role = "form" }))
                 {
                     @Html.HiddenFor(m => m.ProdutoId)
