Criação da Home

--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Index.cshtml
@@ -61,7 +61,7 @@
 
             $('li').removeClass("active");
 
-            $('#liCategoria').addClass("active");
+            $('#liCategorias').addClass("active");
         });
     </script>
 }
