--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
@@ -32,7 +32,7 @@
                         {
                             <div class="panel-body">
                                 <img class="" img-thumbnail"
-                                     src="@Url.Action("GetLogotipo2", "Produtos", new { id = Model.ProdutoId })"
+                                     src="@Url.Action("GetLogotipo", "Produtos", new { id = Model.ProdutoId })"
                                      style="display:block;
                                      margin-left:auto; margin-right:auto;" />
                             </div>
@@ -43,7 +43,7 @@
                                                value="Sim">Remover imagem
                                     </label>
                                 </div>
-                                @Html.ActionLink("Baixar o arquivo : " + Model.NomeArquivo, "DownloadArquivo", "DownloadArquivo2", "Produto", new { area = "Cadastros", id = Model.ProdutoId }, null)
+                                @Html.ActionLink("Baixar o arquivo : " + Model.NomeArquivo, "DownloadArquivo", "Produto", new { area = "Cadastros", id = Model.ProdutoId }, null)
                             </div>
                         }
 
