--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/Edit.cshtml
@@ -3,7 +3,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Title = "Visualizando os dados de um PRODUTO";
 }
-@using (Html.BeginForm("Edit", "Produto", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "Produto", FormMethod.Post,
+new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="panel panel-primary">
@@ -11,9 +12,10 @@
             Alteração dos dados de um PRODUTO
         </div>
         <div class="panel-body">
-            @Html.Partial("~/Views/Produto/_PartialEditContentPanel.cshtml", Model)
-
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            <div class="form-horizontal">
+                <h4>Produto</h4>
+                <hr />
+                @Html.Partial("~/Views/Produto/_PartialEditContentPanel.cshtml", Model)
                 @Html.HiddenFor(model => model.ProdutoId)
                 @Html.HiddenFor(model => model.LogotipoMimeType)
                 @Html.HiddenFor(model => model.Logotipo)
@@ -22,40 +24,42 @@
                         @Html.TextBox("logotipo", "", new { type = "file" }) <br />
                     </div>
                     <div class="form-group">
-                        @if (Model.Logotipo == null)
-                        {
-                            <div class="form-control-static">
-                                Nenhuma imagem adicionada
-                            </div>
-                        }
-                        else
-                        {
-                            <div class="panel-body">
-                                <img class="" img-thumbnail"
-                                     src="@Url.Action("GetLogotipo", "Produtos", new { id = Model.ProdutoId })"
-                                     style="display:block;
-                                     margin-left:auto; margin-right:auto;" />
-                            </div>
-                            <div class="panel-footer">
-                                <div class="checkbox">
-                                    <label>
-                                        <input type="checkbox" name="chkRemoverImagem"
-                                               value="Sim">Remover imagem
-                                    </label>
+                        <div class="form-group">
+                            @if (Model.NomeArquivo == null)
+                            {
+                                <div class="form-control-static">
+                                    Nenhuma imagem adicionada
                                 </div>
-                                @Html.ActionLink("Baixar o arquivo : " + Model.NomeArquivo, "DownloadArquivo", "Produto", new { area = "Cadastros", id = Model.ProdutoId }, null)
-                            </div>
-                        }
-
+                            }
+                            else
+                            {
+                                <div class="panel-body">
+                                    <img class="img-thumbnail"
+                                         src="@Url.Action("GetLogotipo2", "Produtos", new { id = Model.ProdutoId })"
+                                         style="display:block; margin-left:auto; margin-right:auto;" />
+                                </div>
+                                <div class="panel-footer">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="chkRemoverImagem"
+                                                   value="Sim">Remover imagem
+                                        </label>
+                                    </div>
+                                    @Html.ActionLink("Baixar o arquivo : " + Model.NomeArquivo, "DownloadArquivo2", "Produto", new { area = "Cadastros", id = Model.ProdutoId }, null)
+                                </div>
+                            }
+                        </div>
                     </div>
                 </div>
-                        <div class="form-group">
-                            <div class="col-md-offset-2 col-md-10">
-                                <input type="submit" value="Gravar alterações" class="btn btn-default" />
-                            </div>
-                        </div>
+
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Gravar alterações" class="btn btn-default" />
+                    </div>
                 </div>
-         </div>
+            </div>
+        </div>
+    </div>
 }
 @section ScriptPage {
     <script type="text/javascript">
