--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/_PartialDetailsContentPanel.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Produto/_PartialDetailsContentPanel.cshtml
@@ -32,6 +32,15 @@
     </div>
 </div>
 <div class="form-group">
+    @Html.LabelFor(model => model.Destaque)<br />
+    <div class="input-group">
+        <span class="input-group-addon">
+            <i class="glyphicon glyphicon-check"></i>
+        </span>
+        @Html.EditorFor(model => model.Destaque, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+    </div>
+</div>
+<div class="form-group">
     @Html.LabelFor(model => model.Fabricante.Nome)<br />
     <div class="input-group">
         <span class="input-group-addon">
@@ -46,4 +55,5 @@
             }
         })
     </div>
+
 </div>
