--- a/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Delete.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Views/Categorias/Delete.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="panel panel-primary">
     <div class="panel-heading">
-        Dados da categoria a ser removido
+        Dados da categoria a ser removida
     </div>
     <div class="panel-body">
         <div class="form-group">
