--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Cadastros/Views/Produto/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Cadastros/Views/Produto/Edit.cshtml
@@ -1,103 +1,73 @@
 ﻿@model Modelo.Cadastros.Produto
-
 @{
-    ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Visualizando os dados de um PRODUTO";
 }
-
-<h2>Edit</h2>
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Produto", FormMethod.Post,
+new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Produto</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.ProdutoId)
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
-            </div>
+    <div class="panel panel-primary">
+        <div class="panel-heading">
+            Alteração dos dados de um PRODUTO
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.DataCadastro, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.DataCadastro, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataCadastro, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoriaId, "CategoriaId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CategoriaId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoriaId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.FabricanteId, "FabricanteId", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("FabricanteId", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.FabricanteId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.LogotipoMimeType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.LogotipoMimeType, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.LogotipoMimeType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Logotipo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Logotipo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Logotipo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.NomeArquivo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NomeArquivo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NomeArquivo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.TamanhoArquivo, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.TamanhoArquivo, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.TamanhoArquivo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Destaque, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.Destaque)
-                    @Html.ValidationMessageFor(model => model.Destaque, "", new { @class = "text-danger" })
+        <div class="panel-body">
+            <div class="form-horizontal">
+                <h4>Produto</h4>
+                <hr />
+                @Html.Partial("~/Views/Produto/_PartialEditContentPanel.cshtml", Model)
+                @Html.HiddenFor(model => model.ProdutoId)
+                @Html.HiddenFor(model => model.LogotipoMimeType)
+                @Html.HiddenFor(model => model.Logotipo)
+                <div class="col-md-offset-7 col-md-5">
+                    <div class="form-group">
+                        @Html.TextBox("logotipo", "", new { type = "file" }) <br />
+                    </div>
+                    <div class="form-group">
+                        <div class="form-group">
+                            @if (Model.NomeArquivo == null)
+                            {
+                                <div class="form-control-static">
+                                    Nenhuma imagem adicionada
+                                </div>
+                            }
+                            else
+                            {
+                                <div class="panel-body">
+                                    <img class="img-thumbnail"
+                                         src="@Url.Action("GetLogotipo2", "Produtos", new { id = Model.ProdutoId })"
+                                         style="display:block; margin-left:auto; margin-right:auto;" />
+                                </div>
+                                <div class="panel-footer">
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox" name="chkRemoverImagem"
+                                                   value="Sim">Remover imagem
+                                        </label>
+                                    </div>
+                                    @Html.ActionLink("Baixar o arquivo : " + Model.NomeArquivo, "DownloadArquivo2", "Produto", new { area = "Cadastros", id = Model.ProdutoId }, null)
+                                </div>
+                            }
+                        </div>
+                    </div>
                 </div>
-            </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Gravar alterações" class="btn btn-default" />
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 }
+@section ScriptPage {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('li').removeClass("active");
+            $('#liProdutos').addClass("active");
+        });
+    </script>
+}
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+
