--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Cadastros/Views/Produto/Index.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Cadastros/Views/Produto/Index.cshtml
@@ -1,81 +1,80 @@
 ﻿@model IEnumerable<Modelo.Cadastros.Produto>
-
 @{
-    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Listagem de PRODUTOS";
 }
-
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Categoria.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Fabricante.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Nome)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DataCadastro)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LogotipoMimeType)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Logotipo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.NomeArquivo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TamanhoArquivo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Destaque)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Categoria.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Fabricante.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Nome)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DataCadastro)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LogotipoMimeType)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Logotipo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.NomeArquivo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TamanhoArquivo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Destaque)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ProdutoId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ProdutoId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ProdutoId })
-        </td>
-    </tr>
+@if (@TempData["Message"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["Message"]
+    </div>
 }
-
-</table>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Relação de PRODUTOS registrados
+    </div>
+    <div class="panel-body">
+        <table class="table table-striped table-hover">
+            <thead>
+                <tr>
+                    <th>
+                        @Html.DisplayNameFor(model => model.ProdutoId)
+                    </th>
+                    <th>
+                        @Html.DisplayNameFor(model => model.Nome)
+                    </th>
+                    <th>Categoria</th>
+                    <th>Fabricante</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.ProdutoId)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Categoria.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Fabricante.Nome)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Destaque)
+                        </td>
+                        <td>
+                            @Html.ActionLink("Alterar", "Edit", new { id = item.ProdutoId }) |
+                            @Html.ActionLink("Detalhes", "Details", new { id = item.ProdutoId }) |
+                            @Html.ActionLink("Eliminar", "Delete", new { id = item.ProdutoId })
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+    <div class="panel-footer panel-info">
+        @Html.ActionLink("Registrar um novo PRODUTO", "Create", null,
+        new { @class = "btn btn-success" })
+    </div>
+</div>
+@section styles{
+    <link href="@Url.Content("~/content/DataTables/css/dataTables.bootstrap.css")"
+          rel="stylesheet">
+}
+@section ScriptPage {
+    <script src=" @Url.Content("~/scripts/DataTables/jquery. dataTables.js")"></script>
+    <script src="@Url.Content("~/scripts/DataTables/dataTables.bootstrap.js")"></script>
+    <script type="text/javascript">
+$(document).ready(function () {
+$('li').removeClass("active");
+$('#liProdutos').addClass("active");
+$('.table').dataTable({
+"order": [[1, "asc"]]
+});
+});
+    </script>
+}
