--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Tabelas/Views/Categorias/Details.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Tabelas/Views/Categorias/Details.cshtml
@@ -1,26 +1,35 @@
 ﻿@model Modelo.Tabelas.Categoria
 
+
 @{
-    ViewBag.Title = "Details";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Visualizando detalhes de uma CATEGORIA";
 }
-
-<h2>Details</h2>
-
-<div>
-    <h4>Categoria</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Nome)
-        </dd>
-
-    </dl>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        Visualizando detalhes de uma CATEGORIA
+    </div>
+    <div class="panel-body">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Nome)
+            <br />
+            <div class="input-group">
+                <span class="input-group-addon">
+                    <i class="glyphicon glyphicon-user"></i>
+                </span>
+                @Html.EditorFor(model => model.Nome, new
+                {
+                    htmlAttributes =
+                new { @class = "form-control", disabled = "disabled" }
+                })
+            </div>
+        </div>
+    </div>
+    <div class="panel-footer panel-info">
+        @Html.ActionLink("Alterar", "Edit", new { id = Model.CategoriaId },
+        new { @class = "btn btn-info" })
+        @Html.ActionLink("Retornar para a listagem", "Index", null,
+        new { @class = "btn btn-info" })
+    </div>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CategoriaId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@Html.Partial("~/Views/Fabricantes/_PorCategorias.cshtml", Model.Produtos.ToList())
