--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Tabelas/Views/Shared/_Layout.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Tabelas/Views/Shared/_Layout.cshtml
@@ -1,40 +1,49 @@
 ﻿<!DOCTYPE html>
+
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/Site.css" rel="stylesheet" type="text/css" />
-    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
+          charset="utf-8" />
+    <title>@ViewBag.Title</title>
+    <link href="@Url.Content("~/content/bootstrap.css")" rel="stylesheet" />
+    @RenderSection("styles", false)
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div>
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <div class="row">
+                <div class="page-header bg-primary">
+                    <h1>
+                        Desenvolvimento em ASP.NET MVC
+                        <small>
+                            Utilizando o Bootstrap
+                        </small>
+                    </h1>
+                </div>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                </ul>
+            <div class="row">
+                <div class="col-xs-3 col-md-3 bg-success">
+                    <ul class="nav nav-pills nav-stacked">
+                        <li id="liHome" role="presentation" class="active">@Html.ActionLink("Home", "Index", "Home")</li>
+                        <li id="liCategorias" role="presentation">@Html.ActionLink("Categorias", "Index", "Categorias", new { Area = "Tabelas" }, null)</li>
+                        <li id="liFabricantes" role="presentation">@Html.ActionLink("Fabricantes", "Index", "Fabricantes", new { Area = "Cadastros" }, null)</li>
+                        <li id="liProdutos" role="presentation"> @Html.ActionLink("Produtos", "Index", "Produtos", new { Area = "Tabelas" }, null)</li>
+                    </ul>
+                </div>
+                <div class="col-xs-9 col-md-9">
+                    <br />
+                    @RenderBody()
+                </div>
+            </div> <br />
+            <div class="row">
+                <div class="col-xs-12 col-md-12 bg-primary ">
+                    <small>Layout com Bootstrap</small>
+                </div>
             </div>
         </div>
+        <script src="@Url.Content("~/scripts/jquery-1.10.2.js")"></script>
+        <script src="@Url.Content("~/scripts/bootstrap.js")"></script>
+        @RenderSection("ScriptPage", false);
     </div>
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
-    </div>
-
-    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
 </body>
 </html>
