--- a/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Seguranca/Views/Admin/Edit.cshtml
+++ b/WebAppProjeto01G1/WebAppProjeto01G1/Areas/Seguranca/Views/Admin/Edit.cshtml
@@ -1,45 +1,50 @@
 ﻿@model WebAppProjeto01G1.Areas.Seguranca.Models.UsuarioViewModel
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    ViewBag.Title = "Registrando um NOVO USUÁRIO";
+    ViewBag.Title = "Alterando dados de um NOVO USUÁRIO";
 }
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="panel panel-primary">
         <div class="panel-heading">
-            Registro de um NOVO USUÁRIO
+            Alterando o USUÁRIO @Html.DisplayFor(model => model.Id)
         </div>
         <div class="panel-body">
             <div class="form-horizontal">
-                @if (ViewData.ModelState.Keys.Any(
-                k => ViewData.ModelState[k].Errors.Count() > 0))
+                @if (ViewData.ModelState.Keys.Any(k => ViewData.ModelState[k].
+                Errors.Count() > 0))
                 {
-                    <div class="alert alert-danger alert-dismissable">
-                        @Html.ValidationSummary(false,
-                        "Verifique os seguintes erros:")
-
-                    </div>
+                <div class="alert alert-danger alert-dismissable">
+                    @Html.ValidationSummary(false, "Verifique os seguintes erros: ")
+                </div>
                 }
                 <div class="form-group">
                     @Html.LabelFor(model => model.Nome, htmlAttributes:
                     new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Nome,
-                        new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Nome, new
+                        {
+                            htmlAttributes =
+                        new { @class = "form-control" }
+                        })
                         @Html.ValidationMessageFor(model => model.Nome, "",
                         new { @class = "text-danger" })
+
                     </div>
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(model => model.Email, htmlAttributes:
                     new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @Html.EditorFor(model => model.Email,
-                        new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Email, new
+                        {
+                            htmlAttributes =
+                        new { @class = "form-control" }
+                        })
                         @Html.ValidationMessageFor(model => model.Email, "",
-                        new { @class = "text-danger" })
-
+                        new { @class = "text-danger" }
+                        )
                     </div>
                 </div>
                 <div class="form-group">
@@ -56,11 +61,12 @@
         </div>
         <div class="panel-footer panel-info">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Adicionar Usuário"
+                <input type="submit" value="Alterar Usuário"
                        class="btn btn-danger" />
 
-                @Html.ActionLink("Retornar para a listagem de USUÁRIOS", "Index",
-                null, new { @class = "btn btn-warning" })
+                @Html.ActionLink("Retornar para a listagem de USUÁRIOS",
+                "Index", null, new { @class = "btn btn-warning" })
+
             </div>
             <br /> <br />
         </div>
@@ -68,9 +74,9 @@
 }
 @section ScriptPage {
     <script type="text/javascript">
-        $(document).ready(function () {
-            $('li').removeClass("active");
-            $('#liUsuarios').addClass("active");
-        });
+$(document).ready(function () {
+$('li').removeClass("active");
+('#liUsuarios').addClass("active");
+});
     </script>
 }
